--- a/7/4/index.html
+++ b/7/4/index.html
@@ -9,18 +9,10 @@
  </head>
 <body>
 <div class="konti">
-  <header>
-     <p>Header</p>
-  </header>
-  <main>
-    <p>Main content</p>
-  </main>
-  <aside>
-    <p>Sidebar</p>
-  </aside>   
-  <footer>
-    <p>Footer</p>
-  </footer>
+  <header>Header</header>
+  <main>Main content</main>
+  <aside>Sidebar</aside>   
+  <footer>Footer</footer>
 </div>
 </body>
 </html>
