--- a/5/1/index.html
+++ b/5/1/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="bg">
 <head>
-  <meta charset="UTF-8" >
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Circle to square animation</title>
   <link rel="stylesheet" href="style.css" />
- </head>
+</head>
 <body>
   <div class="cs" ></div>
 </body>
