Вертикално субменю с чист css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="bg">
 <head>
 <meta charset="utf-8" />
-<title>Заглавие</title>
+<title>Домашни и екстри</title>
 
 <style>
   * {
@@ -27,7 +27,8 @@
   <li><a href="./7/5/index.html">7/5</a></li>
   <li><a href="./8/2/index.html">8/2</a></li>
   <li><a href="./8/3/index.html">8/3</a></li>
-
+  <li><a href="./8/3/index.html">8/3</a></li>
+  <li><a href="./чист-css/vert-menu-pure-css.html">Вертикално субменю</a></li>
 
 </ul>
 
