ОП, хвани мишлето!

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <li><a href="./8/3/index.html">8/3</a></li>
   <li><a href="./чист-css/vert-menu-pure-css.html">Вертикално субменю</a></li>
   <li><a href="./js/life0.html">Живот</a></li>
+  <li><a href="./js/cath-the-mouse/index.html">Хвани мишлето!</a></li>
 
 </ul>
 
