брояч на мишлетата

--- a/js/cath-the-mouse/index.html
+++ b/js/cath-the-mouse/index.html
@@ -11,9 +11,13 @@
     box-sizing: border-box;
    }
   #imageId {
-      border: 1px solid green;
-      width: 200px;
-      height: 200px;
+    border: 1px solid green;
+    width: 200px;
+    height: 200px;
+  }
+  #nMouse {
+    font-size: 30px;
+    color: green;
   }
 </style>
 
@@ -25,6 +29,7 @@
 </head>
 
 <body>
+  <div id="nMouse"></div>
   <img id="imageId" src="mouse.jpg" title="Mouse Jery" />
   
   <!-- <buton id="imageId" >Catch me!</buton> -->
