--- a/js/cath-the-mouse/index.html
+++ b/js/cath-the-mouse/index.html
@@ -30,6 +30,10 @@
 
 <body>
   <div id="nMouse"></div>
+  <div><span id="nChase" ></span> избягвания</div>
+  <button onclick="incMouse()" >Уголеми мишлето!</button>
+  <button onclick="decMouse()" >Намали мишлето!</button>
+
   <img id="imageId" src="mouse.jpg" title="Mouse Jery" />
   
   <!-- <buton id="imageId" >Catch me!</buton> -->
