--- a/js/cath-the-mouse/index.html
+++ b/js/cath-the-mouse/index.html
@@ -25,8 +25,10 @@
 </style>
 
 <script>
-
-
+//Слага клас „loaded“ на бодито
+window.addEventListener('DOMContentLoaded', (event) => {
+document.getElementsByTagName('body')[0].classList.add('loaded')
+})
 </script>
 
 </head>
