--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 <title>Домашни и екстри</title>
+<meta name="description" content="Домашни и екстри: CSS3, js, html5" />
 
 <style>
-  * {
-    margin: 0;
-    padding: 0;  
-    box-sizing: border-box;
-   }
+* {
+  margin: 0;
+  padding: 0;  
+  box-sizing: border-box;
+}
 
+html {
+  font-size: 24px;
+  line-height: 2em;
+}
 </style>
 
 </head>
