--- a/js/cath-the-mouse/index.html
+++ b/js/cath-the-mouse/index.html
@@ -34,10 +34,10 @@ document.getElementsByTagName('body')[0].classList.add('loaded')
 </head>
 
 <body>
-  <h1>Ге&#768;пи Джери!</h1>
+  <h1>Гѐпи Джери!</h1>
   <div id="nMouse"></div>
   <div><span id="nChase" ></span> избягвания</div>
-  <button onclick="incMouse()">Уголеми мишлето за да го ге&#768;пиш лесно!</button><br />
+  <button onclick="incMouse()">Уголеми мишлето за да го гѐпиш лесно!</button><br />
   <button onclick="decMouse()" >Намали мишлето!</button>
 
   <img id="imageId" src="mouse.jpg" title="Mouse Jery" />
