Орли, змии и мишки

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ html {
   <li><a href="./чист-css/vert-menu-pure-css.html">Вертикално субменю</a></li>
   <li><a href="./js/life0.html">Живот</a></li>
   <li><a href="./js/cath-the-mouse/index.html">Хвани мишлето!</a></li>
+  <li><a href="./js/orli.html">Орли, змии и мишки</a></li>
 
 </ul>
 
