--- a/js/orli.html
+++ b/js/orli.html
@@ -73,7 +73,7 @@ let orliNumber = parseInt(orliE.value);
 let zmiiNumber = parseInt(zmiiE.value);
 let mishkiNumber = parseInt(mishkiE.value);
 
-
+alert(mishkiNumber)
 
 let brZhivotni = orliNumber + zmiiNumber + mishkiNumber;
 
@@ -163,10 +163,10 @@ izhodE.value = (`Общо атаки = ${i}, Орли = ${orliNumber}, Змии 
       <input type="number" id="zmiiId" value="17" />
     </label>
     <label for="mishkiId">Мишки<br />
-      0<input type="range" id="mishkiId" value="499" oninput="x.value=parseInt(mishkiId.value)" />500
+      0<input type="range" id="mishkiId" value="55" min="0" max="500" />500
     </label>
     <label for="xId">=
-      <output id="xId" name="x" for="mishkiId" >499</output>
+      <output id="xId" name="x" for="mishkiId" >55</output>
     </label>
   </fieldset>
 </form>
