input type range 3

--- a/js/orli.html
+++ b/js/orli.html
@@ -73,7 +73,7 @@ let orliNumber = parseInt(orliE.value);
 let zmiiNumber = parseInt(zmiiE.value);
 let mishkiNumber = parseInt(mishkiE.value);
 
-alert(mishkiNumber)
+//alert(mishkiNumber)
 
 let brZhivotni = orliNumber + zmiiNumber + mishkiNumber;
 
