--- a/js/orli.html
+++ b/js/orli.html
@@ -166,13 +166,13 @@ insertPzuko(`Общо атаки = ${i}, Орли = ${orliNumber}, Змии = ${
   <fieldset>
     <legend>Вход</legend>
       <label for="orliId" >Орли
-      <input type="number" id="orliId" value="6" />
+      <input type="number" id="orliId" name="orliName" value="6" onclick="orliName.value=''"/>
     </label>
     <label for="zmiiId">Змии
-      <input type="number" id="zmiiId" value="17" />
+      <input type="number" id="zmiiId" name="zmiiName" value="17" onclick="zmiiId.value=''" />
     </label>
     <label for="mishkiId">Мишки<br />
-      [0<input type="range" id="mishkiId" value="55" min="0" max="500" oninput="x.value=parseInt(mishkiId.value)" />500]
+      [0<input type="range" id="mishkiId" value="55" min="0" max="150" oninput="x.value=parseInt(mishkiId.value)" />150]
     </label>
     <label for="xId">=>
       <output id="xId" name="x" for="mishkiId" >55</output> мишки
@@ -185,10 +185,11 @@ insertPzuko(`Общо атаки = ${i}, Орли = ${orliNumber}, Змии = ${
     <legend>Изход</legend>
    <!--  <label for="izhodId">Последно
       <input id="izhodId" value="" readonly /> -->
+      <p>Последно:</p>
       <div id="divZukoId"></div>
     <!-- </label> -->
-
-    <div id="divId" ></div>
+      <p>Всички:</p>
+      <div id="divId" ></div>
   </fieldset>
   
 </div>
