--- a/js/orli.html
+++ b/js/orli.html
@@ -42,6 +42,9 @@ input:hover, button:hover, label:hover, input:active, input:focus, input:target 
 button:hover {
   cursor: pointer;
 }
+.butForRange {
+  width: auto;
+}
 
 </style>
 
@@ -77,7 +80,7 @@ function orli() {
 
 let orliNumber = Math.abs(parseInt(orliE.value));
 let zmiiNumber = Math.abs(parseInt(zmiiE.value));
-let mishkiNumber = Math.abs(parseInt(mishkiE.value));
+let mishkiNumber = Math.abs(parseInt(mishkiE.value))
 
 if (isNaN(orliNumber))
     orliNumber = 0
@@ -175,23 +178,26 @@ insertPzuko(`Общо атаки = ${i}, Орли = ${orliNumber}, Змии = ${
 <body>
 <div id="konti">
   <!-- <a href="#but">Към бутона</a> -->
-<form>
+
   <fieldset>
     <legend>Вход</legend>
       <label for="orliId" >Орли
-      <input type="number" id="orliId" name="orliName" value="6" onclick="orliName.value=''"/>
+      <input type="number" id="orliId" name="orliName" value="6" min="0" max="150" onclick="orliName.value=''"/>
     </label>
     <label for="zmiiId">Змии
       <input type="number" id="zmiiId" name="zmiiName" value="17" onclick="zmiiId.value=''" />
     </label>
     <label for="mishkiId">Мишки<br />
-      [0<input type="range" id="mishkiId" value="55" min="0" max="150" oninput="x.value=parseInt(mishkiId.value)" />150]
+      [0<input type="range" id="mishkiId" value="55" min="0" max="150" oninput="xId.value=parseInt(mishkiId.value)" />150]
     </label>
+    <button class="butForRange" onclick="document.getElementById('mishkiId').value--;xId.value--;" >--</button>
     <label for="xId">=>
       <output id="xId" name="x" for="mishkiId" >55</output> мишки
     </label>
+    <button class="butForRange" onclick="document.getElementById('mishkiId').value++;xId.value++;" >++</button>
+
   </fieldset>
-</form>
+
   <button id="but" onclick="orli();window.location.href = '#but';" >Започни случаен лов</button>
    <a href="#konti" >Въведи нови данни!</a>
   <fieldset>
@@ -208,4 +214,3 @@ insertPzuko(`Общо атаки = ${i}, Орли = ${orliNumber}, Змии = ${
 </div>
 </body>
 </html>
-
