--- a/js/orli.html
+++ b/js/orli.html
@@ -90,7 +90,6 @@ if (isNaN(mishkiNumber))
     mishkiNumber = 0
 
 //alert(mishkiNumber)
-//alert(orliNumber)
 //alert(zmiiNumber)
 
 let brZhivotni = orliNumber + zmiiNumber + mishkiNumber;
@@ -182,10 +181,10 @@ insertPzuko(`Общо атаки = ${i}, Орли = ${orliNumber}, Змии = ${
   <fieldset>
     <legend>Вход</legend>
       <label for="orliId" >Орли
-      <input type="number" id="orliId" name="orliName" value="6" min="0" max="150" onclick="orliId.value=''"/>
+      <input type="number" id="orliId" name="orliName" value="6" min="0" max="150" />
     </label>
     <label for="zmiiId">Змии
-      <input type="number" id="zmiiId" name="zmiiName" value="17" onclick="zmiiId.value=''" />
+      <input type="number" id="zmiiId" name="zmiiName" value="17" min="0" max="150" />
     </label>
     <label for="mishkiId">Мишки<br />
       [0<input type="range" id="mishkiId" value="55" min="0" max="150" oninput="xId.value=parseInt(mishkiId.value)" />150]
