--- a/js/orli.html
+++ b/js/orli.html
@@ -190,7 +190,7 @@ insertPzuko(`Общо атаки = ${i}, Орли = ${orliNumber}, Змии = ${
       [0<input type="range" id="mishkiId" value="55" min="0" max="150" oninput="xId.value=parseInt(mishkiId.value)" />150]
     </label>
     <button class="butForRange" onclick="if (xId.value>0) {mishkiId.value--;xId.value--;}" >--</button>
-    <label for="xId">=>
+    <label for="xId">
       <output id="xId" name="x" for="mishkiId" >55</output> мишки
     </label>
     <button class="butForRange" onclick="if (xId.value<150) {mishkiId.value++;xId.value++;}" >++</button>
