--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@ html {
 <body>
 
 <ul>
-  <li><a href="./5/1/index.html">5/1</a></li>
-  <li><a href="./5/2/index.html">5/2</a></li>
-  <li><a href="./7/1/index.html">7/1</a></li>
+  <li><a href="./5/1/index.html">5/1] Квадрат към кръг</a></li>
+  <li><a href="./5/2/index.html">5/2] Вертикално меню (идат отляво)</a></li>
+  <li><a href="./5/3/index.html">5/3] Вертикално меню с анимация (падат отгоре)</a></li>
+  <li><a href="./7/1/index.html">7/1 Грид</a></li>
   <li><a href="./7/2/index.html">7/2</a></li>
   <li><a href="./7/3/index.html">7/3</a></li>
   <li><a href="./7/4/index.html">7/4</a></li>
-  <li><a href="./7/5/index.html">7/5</a></li>
+  <li><a href="./7/5/index.html">7/5] 3 колони, хедър и футер</a></li>
   <li><a href="./8/2/index.html">8/2</a></li>
   <li><a href="./8/3/index.html">8/3</a></li>
   <li><a href="./8/3/index.html">8/3</a></li>
