--- a/js/orli.html
+++ b/js/orli.html
@@ -1,215 +1,232 @@
 <!DOCTYPE html>
 <html lang="bg">
+
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-<title>Орли</title>
-<meta name="description" content="Описание" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Орли</title>
+  <meta name="description" content="Описание" />
 
-<style>
-*, *:before, *:after {
- /*  padding: 0;
+  <style>
+    *,
+    *:before,
+    *:after {
+      /*  padding: 0;
   margin: 0; */
-  box-sizing: inherit;
-}
-html {
-  box-sizing: border-box;
+      box-sizing: inherit;
+    }
 
-  font-size: 24px;
-  line-height: 1.6em;
-}
+    html {
+      box-sizing: border-box;
 
-/* #konti {
+      font-size: 24px;
+      line-height: 1.6em;
+    }
+
+    /* #konti {
   padding: 2em;
 } */
 
-#divId {
-  
-  overflow-y: scroll;
-  height: 300px;
+    #divId {
 
-  border: 2px solid green;
-}
+      overflow-y: scroll;
+      height: 300px;
 
-input, button {
-  font-size: 2em;
-  width: 100%;
-}
-input:hover, button:hover, label:hover, input:active, input:focus, input:target {
-  background-color: rgb(64, 145, 50) !important;
-}
-button:hover {
-  cursor: pointer;
-}
-.butForRange {
-  width: auto;
-}
+      border: 2px solid green;
+    }
 
-</style>
+    input,
+    button {
+      font-size: 2em;
+      width: 100%;
+    }
 
-<script>
-var i, div, orli, zmii, mishki
-window.onload = function() {
-  div = document.getElementById('divId')
-  orliE = document.getElementById('orliId')
-  zmiiE = document.getElementById('zmiiId')
-  mishkiE = document.getElementById('mishkiId')
- // izhodE = document.getElementById('izhodId')
-  divZukoE = document.getElementById('divZukoId')
+    input:hover,
+    button:hover,
+    label:hover,
+    input:active,
+    input:focus,
+    input:target {
+      background-color: rgb(64, 145, 50) !important;
+    }
 
-  //start()
-  orli();
-  //6,17,55
-  //for (let i=0; i<=20; i++)
-    //div.innerHTML += 'Extra stuff' + i;
-}
+    button:hover {
+      cursor: pointer;
+    }
 
-function insertP(replika) {
-  var elem = document.createElement('p')
-  elem.appendChild(document.createTextNode(replika))
-  div.appendChild(elem)
-}
-function insertPzuko(replika) {
-  var elem = document.createElement('p')
-  elem.appendChild(document.createTextNode(replika))
-  divZukoE.appendChild(elem)
-}
+    .butForRange {
+      width: auto;
+    }
+  </style>
 
-function orli() {
+  <script>
+    var i, div, orli, zmii, mishki
+    window.onload = function () {
+      div = document.getElementById('divId')
+      orliE = document.getElementById('orliId')
+      zmiiE = document.getElementById('zmiiId')
+      mishkiE = document.getElementById('mishkiId')
+      // izhodE = document.getElementById('izhodId')
+      divZukoE = document.getElementById('divZukoId')
 
-let orliNumber = Math.abs(parseInt(orliE.value));
-let zmiiNumber = Math.abs(parseInt(zmiiE.value));
-let mishkiNumber = Math.abs(parseInt(mishkiE.value));
+      //start()
+      orli();
+      //6,17,55
+      //for (let i=0; i<=20; i++)
+      //div.innerHTML += 'Extra stuff' + i;
+    }
 
-if (isNaN(orliNumber))
-    orliNumber = 0
-if (isNaN(zmiiNumber))
-    zmiiNumber = 0
-if (isNaN(mishkiNumber))
-    mishkiNumber = 0
+    function insertP(replika) {
+      var elem = document.createElement('p')
+      elem.appendChild(document.createTextNode(replika))
+      div.appendChild(elem)
+    }
 
-//alert(mishkiNumber)
-//alert(zmiiNumber)
+    function insertPzuko(replika) {
+      var elem = document.createElement('p')
+      elem.appendChild(document.createTextNode(replika))
+      divZukoE.appendChild(elem)
+    }
 
-let brZhivotni = orliNumber + zmiiNumber + mishkiNumber;
+    function orli() {
 
-div.innerHTML = '';  //чисти всичко в div-а
-divZukoE.innerHTML = ''; 
+      let orliNumber = Math.abs(parseInt(orliE.value));
+      let zmiiNumber = Math.abs(parseInt(zmiiE.value));
+      let mishkiNumber = Math.abs(parseInt(mishkiE.value));
 
-insertP(`Общо атаки = ${0}, Орли = ${orliNumber}, Змии = ${zmiiNumber}, Мишки = ${mishkiNumber}, Общо животни = ${brZhivotni}`);
+      if (isNaN(orliNumber))
+        orliNumber = 0
+      if (isNaN(zmiiNumber))
+        zmiiNumber = 0
+      if (isNaN(mishkiNumber))
+        mishkiNumber = 0
 
-for (i = 1; i >= 1; i++) {
+      //alert(mishkiNumber)
+      //alert(zmiiNumber)
 
-vidIzyazhdane = parseInt(Math.random() * 3);
+      let brZhivotni = orliNumber + zmiiNumber + mishkiNumber;
 
-//console.log(vidIzyazhdane);
-if (mishkiNumber == 0)
-insertP("Няма мишки.")
+      div.innerHTML = ''; //чисти всичко в div-а
+      divZukoE.innerHTML = '';
 
-if (vidIzyazhdane == 0) { //орел изяжда змия
-if (orliNumber == 0)
-insertP("Няма орли.");
-if (zmiiNumber !== 0 && orliNumber !== 0) {
-orliNumber--;
-zmiiNumber--;
-mishkiNumber++;
+      insertP(
+        `Общо атаки = ${0}, Орли = ${orliNumber}, Змии = ${zmiiNumber}, Мишки = ${mishkiNumber}, Общо животни = ${brZhivotni}`
+      );
 
-insertP("Орел изяде змия!")
-}
-if (orliNumber !== 0 && zmiiNumber == 0)
-insertP("Неуспешна атака на орел.");
+      for (i = 1; i >= 1; i++) {
 
-}
-if (vidIzyazhdane == 1) { //орел изяжда мишка
-if (orliNumber == 0)
-insertP("Няма орли.");
-if (mishkiNumber !== 0 && orliNumber !==0) {
-orliNumber--;
-zmiiNumber++;
-mishkiNumber--;
+        vidIzyazhdane = parseInt(Math.random() * 3);
 
-insertP("Орел изяде мишка!")
-}
-if (orliNumber !== 0 && mishkiNumber == 0)
-insertP("Неуспешна атака на орел.");
+        //console.log(vidIzyazhdane);
+        if (mishkiNumber == 0)
+          insertP("Няма мишки.")
 
-}
-if (vidIzyazhdane == 2) { //змия изяжда мишка
-if (zmiiNumber == 0)
-insertP("Няма змии");
-if (mishkiNumber !== 0 && zmiiNumber !== 0) {
-orliNumber++;
-zmiiNumber--;
-mishkiNumber--;
+        if (vidIzyazhdane == 0) { //орел изяжда змия
+          if (orliNumber == 0)
+            insertP("Няма орли.");
+          if (zmiiNumber !== 0 && orliNumber !== 0) {
+            orliNumber--;
+            zmiiNumber--;
+            mishkiNumber++;
 
-insertP("Змия изяде мишка!")
-}
-if (zmiiNumber !== 0 && mishkiNumber == 0)
-insertP("Неуспешна атака на змия.");
-}
+            insertP("Орел изяде змия!")
+          }
+          if (orliNumber !== 0 && zmiiNumber == 0)
+            insertP("Неуспешна атака на орел.");
 
-brZhivotni = orliNumber + zmiiNumber + mishkiNumber;
+        }
+        if (vidIzyazhdane == 1) { //орел изяжда мишка
+          if (orliNumber == 0)
+            insertP("Няма орли.");
+          if (mishkiNumber !== 0 && orliNumber !== 0) {
+            orliNumber--;
+            zmiiNumber++;
+            mishkiNumber--;
 
-insertP(`Общо атаки = ${i}, Орли = ${orliNumber}, Змии = ${zmiiNumber}, Мишки = ${mishkiNumber}, Общо животни = ${brZhivotni}`);
+            insertP("Орел изяде мишка!")
+          }
+          if (orliNumber !== 0 && mishkiNumber == 0)
+            insertP("Неуспешна атака на орел.");
 
-if ((mishkiNumber == 0 && zmiiNumber == 0) || (mishkiNumber == 0 && orliNumber == 0) || (zmiiNumber == 0 && orliNumber == 0))
-  break;
+        }
+        if (vidIzyazhdane == 2) { //змия изяжда мишка
+          if (zmiiNumber == 0)
+            insertP("Няма змии");
+          if (mishkiNumber !== 0 && zmiiNumber !== 0) {
+            orliNumber++;
+            zmiiNumber--;
+            mishkiNumber--;
+
+            insertP("Змия изяде мишка!")
+          }
+          if (zmiiNumber !== 0 && mishkiNumber == 0)
+            insertP("Неуспешна атака на змия.");
+        }
+
+        brZhivotni = orliNumber + zmiiNumber + mishkiNumber;
+
+        insertP(
+          `Общо атаки = ${i}, Орли = ${orliNumber}, Змии = ${zmiiNumber}, Мишки = ${mishkiNumber}, Общо животни = ${brZhivotni}`
+        );
+
+        if ((mishkiNumber == 0 && zmiiNumber == 0) || (mishkiNumber == 0 && orliNumber == 0) || (zmiiNumber == 0 &&
+            orliNumber == 0))
+          break;
 
 
-}
-//izhodE.value = (`Общо атаки = ${i}, Орли = ${orliNumber}, Змии = ${zmiiNumber}, Мишки = ${mishkiNumber}, Общо животни = ${brZhivotni}`)
+      }
+      //izhodE.value = (`Общо атаки = ${i}, Орли = ${orliNumber}, Змии = ${zmiiNumber}, Мишки = ${mishkiNumber}, Общо животни = ${brZhivotni}`)
 
-insertPzuko(`Общо атаки = ${i}, Орли = ${orliNumber}, Змии = ${zmiiNumber}, Мишки = ${mishkiNumber}, Общо животни = ${brZhivotni}`)
+      insertPzuko(
+        `Общо атаки = ${i}, Орли = ${orliNumber}, Змии = ${zmiiNumber}, Мишки = ${mishkiNumber}, Общо животни = ${brZhivotni}`
+      )
 
-//window.location.href = "#but";
+      //window.location.href = "#but";
 
-}//край на orli() 
-
-
-
-
-
-</script>
+    } //край на orli() 
+  </script>
 
 </head>
 
 <body>
-<div id="konti">
-  <!-- <a href="#but">Към бутона</a> -->
+  <div id="konti">
+    <!-- <a href="#but">Към бутона</a> -->
 
-  <fieldset>
-    <legend>Вход</legend>
-      <label for="orliId" >Орли
-      <input type="number" id="orliId" name="orliName" value="6" min="0" max="150" />
-    </label>
-    <label for="zmiiId">Змии
-      <input type="number" id="zmiiId" name="zmiiName" value="17" min="0" max="150" />
-    </label>
-    <label for="mishkiId">Мишки<br />
-      [0<input type="range" id="mishkiId" value="55" min="0" max="150" oninput="xId.value=parseInt(mishkiId.value)" />150]
-    </label>
-    <button class="butForRange" onclick="if (xId.value>0) {mishkiId.value--;xId.value--;}" >--</button>
-    <label for="xId">
-      <output id="xId" name="x" for="mishkiId" >55</output> мишки
-    </label>
-    <button class="butForRange" onclick="if (xId.value<150) {mishkiId.value++;xId.value++;}" >++</button>
+    <fieldset>
+      <legend>Вход</legend>
+      <label for="orliId">Орли
+        <input type="number" id="orliId" name="orliName" value="6" min="0" max="150" />
+      </label>
+      <label for="zmiiId">Змии
+        <input type="number" id="zmiiId" name="zmiiName" value="17" min="0" max="150" />
+      </label>
+      <label for="mishkiId">Мишки<br />
+        [0<input type="range" id="mishkiId" value="55" min="0" max="150"
+          oninput="xId.value=parseInt(mishkiId.value)" />150]
+      </label>
+      <button class="butForRange" onclick="if (xId.value>0) {mishkiId.value--;xId.value--;}">--</button>
+      <label for="xId">
+        <output id="xId" name="x" for="mishkiId">55</output> мишки
+      </label>
+      <button class="butForRange" onclick="if (xId.value<150) {mishkiId.value++;xId.value++;}">++</button>
 
-  </fieldset>
+    </fieldset>
 
-  <button id="but" onclick="orli();window.location.href = '#but';" >Започни случаен лов</button>
-   <a href="#konti" >Въведи нови данни!</a>
-  <fieldset>
-    <legend>Изход</legend>
-   <!--  <label for="izhodId">Последно
+    <button id="but" onclick="orli();window.location.href = '#but';">Започни случаен лов</button>
+    <a href="#konti">Въведи нови данни!</a>
+    <fieldset>
+      <legend>Изход</legend>
+      <!--  <label for="izhodId">Последно
       <input id="izhodId" value="" readonly /> -->
       <p>Последно:</p>
       <div id="divZukoId"></div>
-    <!-- </label> -->
+      <!-- </label> -->
       <p>Всички:</p>
-      <div id="divId" ></div>
-  </fieldset>
-  
-</div>
+      <div id="divId"></div>
+    </fieldset>
+
+  </div>
 </body>
+
 </html>
