--- a/index.html
+++ b/index.html
@@ -18,12 +18,19 @@ html {
   font-size: 24px;
   line-height: 2em;
 }
+
+#konti {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
 </style>
 
 </head>
 
 <body>
 
+<div id="konti" >
 <ul>
   <li><a href="./5/1/index.html">5/1] Квадрат към кръг</a></li>
   <li><a href="./5/2/index.html">5/2] Вертикално меню (идат отляво)</a></li>
@@ -42,7 +49,7 @@ html {
   <li><a href="./js/orli.html">Орли, змии и мишки</a></li>
 
 </ul>
-
+</div>
 
 
 
