--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-<title>Домашни и екстри</title>
-<meta name="description" content="Домашни и екстри: CSS3, js, html5" />
+<title>Домашни работи и екстри</title>
+<meta name="description" content="Домашни работи и екстри: CSS3, js, html5, masm" />
 
 <style>
 * {
@@ -31,6 +31,7 @@ html {
 <body>
 
 <div id="konti" >
+   <h1>Домашни работи и екстри</h1>
 <ul>
   <li><a href="./5/1/index.html">5/1] Квадрат към кръг</a></li>
   <li><a href="./5/2/index.html">5/2] Вертикално меню (идат отляво)</a></li>
@@ -43,7 +44,7 @@ html {
   <li><a href="./8/2/index.html">8/2</a></li>
   <li><a href="./8/3/index.html">8/3</a></li>
   <li><a href="./8/3/index.html">8/3</a></li>
-  <li><a href="./чист-css/vert-menu-pure-css.html">Вертикално субменю</a></li>
+  <li><a href="/%D1%87%D0%B8%D1%81%D1%82-css/vert-menu-pure-css.html" >Вертикално субменю</a></li>
   <li><a href="./js/life0.html">Живот</a></li>
   <li><a href="./js/cath-the-mouse/index.html">Хвани мишлето!</a></li>
   <li><a href="./js/orli.html">Орли, змии и мишки</a></li>
