--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ html {
   <li><a href="./8/2/index.html">8/2</a></li>
   <li><a href="./8/3/index.html">8/3</a></li>
   <li><a href="./8/3/index.html">8/3</a></li>
-  <li><a href="/%D1%87%D0%B8%D1%81%D1%82-css/vert-menu-pure-css.html" >Вертикално субменю</a></li>
+  <li><a href="./%D1%87%D0%B8%D1%81%D1%82-css/vert-menu-pure-css.html" >Вертикално субменю</a></li>
   <li><a href="./js/life0.html">Живот</a></li>
   <li><a href="./js/cath-the-mouse/index.html">Хвани мишлето!</a></li>
   <li><a href="./js/orli.html">Орли, змии и мишки</a></li>
